--- a/index.html
+++ b/index.html
@@ -4,34 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"
+          ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
+        >
 
-        <ul>
+        <ul class="site-nav list">
           <li><a href="./index.html">Studio</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
-    </nav>
-    <address>
-        <ul>
+      </nav>
+      <address>
+        <ul class="address list">
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
-    </address>
+      </address>
     </header>
-<main>
+    <main>
       <section>
-        <h1>Effective Solutions
-            for Your Business</h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-    
+
       <section>
         <h2>Section2</h2>
         <ul>
@@ -70,37 +77,72 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/img1.jpg" alt="image 1" width="360" height="300" />
+            <img
+              src="./images/img1.jpg"
+              alt="image 1"
+              width="360"
+              height="300"
+            />
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="image 2" width="360" height="300" />
+            <img
+              src="./images/img2.jpg"
+              alt="image 2"
+              width="360"
+              height="300"
+            />
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="image 3" width="360" height="300" />
+            <img
+              src="./images/img3.jpg"
+              alt="image 3"
+              width="360"
+              height="300"
+            />
           </li>
         </ul>
       </section>
-   
+
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/card1.jpg" alt="Team Card 1" width="264" height="260" />
+            <img
+              src="./images/card1.jpg"
+              alt="Team Card 1"
+              width="264"
+              height="260"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/card2.jpg" alt="Team Card 2" width="264" height="260" />
+            <img
+              src="./images/card2.jpg"
+              alt="Team Card 2"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/card3.jpg" alt="Team Card 3" width="264" height="260" />
+            <img
+              src="./images/card3.jpg"
+              alt="Team Card 3"
+              width="264"
+              height="260"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/card4.jpg" alt="Team Card 4" width="264" height="260" />
+            <img
+              src="./images/card4.jpg"
+              alt="Team Card 4"
+              width="264"
+              height="260"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -108,7 +150,7 @@
       </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
