--- a/index.html
+++ b/index.html
@@ -10,33 +10,34 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>WebStudio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a class="logo" href="./index.html"
-          ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
+    <header class="header">
+      <nav class="header-nav">
+        <a class="header-logo" href="./index.html"
+          ><span class="logo-web">Web</span
+          ><span class="logo-studio">Studio</span></a
         >
 
-        <ul class="site-nav list">
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="header-list">
+          <li class="header-item"><a class="header-link" href="./index.html">Studio</a></li>
+          <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
+          <li class="header-item"><a class="header-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="address list">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="header-address-list">
+          <li class="header-address-item"><a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="header-address-item"><a class="header-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
 
       <section>
@@ -150,7 +151,10 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html"
+        ><span class="logo-web">Web</span
+        ><span class="logo-studio">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
