--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,8 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header-logo" href="./index.html"
-          ><span class="web">Web</span><span class="studio">Studio</span></a
+          ><span class="logo-web">Web</span
+          ><span class="logo-studio">Studio</span></a
         >
 
         <ul class="header-list">
@@ -34,127 +35,127 @@
       </address>
     </header>
     <main>
-      <section>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+      <section class="filter">
+        <ul class="filter-list">
+          <li class="filter-item"><button class="filter-btn" type="button">All</button></li>
+          <li class="filter-item"><button class="filter-btn" type="button">Web Site</button></li>
+          <li class="filter-item"><button class="filter-btn" type="button">App</button></li>
+          <li class="filter-item"><button class="filter-btn" type="button">Design</button></li>
+          <li class="filter-item"><button class="filter-btn" type="button">Marketing</button></li>
         </ul>
       </section>
 
-      <section>
-        <ul>
-          <li>
+      <section class="row1">
+        <ul class="row1-list">
+          <li class="row1-item">
             <img
               src="./images/projectcard1.jpg"
               alt="Project Card 1"
               width="360"
               height="300"
             />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <h3 class="row1-title">Banking App Interface Concept</h3>
+            <p class="row1-text">App</p>
           </li>
-          <li>
+          <li class="row1-item">
             <img
               src="./images/projectcard2.jpg"
               alt="Project Card 2"
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="row1-title">Cashless Payment</h3>
+            <p class="row1-text">Marketing</p>
           </li>
-          <li>
+          <li class="row1-item">
             <img
               src="./images/projectcard3.jpg"
               alt="Project Card 3"
               width="360"
               height="300"
             />
-            <h3>Meditaion App</h3>
-            <p>App</p>
+            <h3 class="row1-title">Meditaion App</h3>
+            <p class="row1-text">App</p>
           </li>
         </ul>
       </section>
 
-      <section>
-        <ul>
-          <li>
+      <section class="row2">
+        <ul class="row2-list">
+          <li class="row2-item">
             <img
               src="./images/projectcard4.jpg"
               alt="Project Card 4"
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="row2-title">Taxi Service</h3>
+            <p class="row2-text">Marketing</p>
           </li>
-          <li>
+          <li class="row2-item">
             <img
               src="./images/projectcard5.jpg"
               alt="Project Card 5"
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="row2-title">Screen Illustrations</h3>
+            <p class="row2-text">Design</p>
           </li>
-          <li>
+          <li class="row2-item">
             <img
               src="./images/projectcard6.jpg"
               alt="Project Card 6"
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="row2-title">Online Courses</h3>
+            <p class="row2-text">Marketing</p>
           </li>
         </ul>
       </section>
 
-      <section>
-        <ul>
-          <li>
+      <section class="row3">
+        <ul class="row3-list">
+          <li class="row3-item">
             <img
               src="./images/projectcard7.jpg"
               alt="Project Card 7"
               width="360"
               height="300"
             />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <h3 class="row3-title">Instagram Stories Concept</h3>
+            <p class="row3-text">Design</p>
           </li>
-          <li>
+          <li class="row3-item">
             <img
               src="./images/projectcard8.jpg"
               alt="Project Card 8"
               width="360"
               height="300"
             />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+            <h3 class="row3-title">Organic Food</h3>
+            <p class="row3-text">Web Site</p>
           </li>
-          <li>
+          <li class="row3-item">
             <img
               src="./images/projectcard9.jpg"
               alt="Project Card 9"
               width="360"
               height="300"
             />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <h3 class="row3-title">Fresh Coffee</h3>
+            <p class="row3-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a class="logo" href="./index.html"
-        ><span class="logo-web">Web</span
-        ><span class="logo-studio">Studio</span></a
-      >
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html"
+      ><span class="logo-web">Web</span
+      ><span class="logo-studio">Studio</span></a
+    >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
