--- a/index.html
+++ b/index.html
@@ -40,33 +40,33 @@
         <button class="hero-btn" type="button">Order Service</button>
       </section>
 
-      <section>
-        <h2>Section2</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="about">
+        <h2 class="about-title">About</h2>
+        <ul class="about-list">
+          <li class="about-item">
+            <h3 class="about-subtitle">Strategy</h3>
+            <p class="about-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-subtitle">Punctuality</h3>
+            <p class="about-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-subtitle">Diligence</h3>
+            <p class="about-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-subtitle">Technologies</h3>
+            <p class="about-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -74,10 +74,10 @@
         </ul>
       </section>
 
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="example">
+        <h2 class="example-title">What are we doing</h2>
+        <ul class="example-list">
+          <li class="example-item">
             <img
               src="./images/img1.jpg"
               alt="image 1"
@@ -85,7 +85,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="example-item">
             <img
               src="./images/img2.jpg"
               alt="image 2"
@@ -93,7 +93,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="example-item">
             <img
               src="./images/img3.jpg"
               alt="image 3"
@@ -104,58 +104,58 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
               src="./images/card1.jpg"
               alt="Team Card 1"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/card2.jpg"
               alt="Team Card 2"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/card3.jpg"
               alt="Team Card 3"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/card4.jpg"
               alt="Team Card 4"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a class="logo" href="./index.html"
-        ><span class="logo-web">Web</span
-        ><span class="logo-studio">Studio</span></a
-      >
-      <p>
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html"
+      ><span class="logo-web">Web</span
+      ><span class="logo-studio">Studio</span></a
+    >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
