--- a/index.html
+++ b/index.html
@@ -22,15 +22,29 @@
         >
 
         <ul class="header-list">
-          <li class="header-item"><a class="header-link" href="./index.html">Studio</a></li>
-          <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
-          <li class="header-item"><a class="header-link" href="">Contacts</a></li>
+          <li class="header-item">
+            <a class="header-link" href="./index.html">Studio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
         <ul class="header-address-list">
-          <li class="header-address-item"><a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="header-address-item"><a class="header-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="header-address-item">
+            <a class="header-address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-address-item">
+            <a class="header-address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
@@ -152,9 +166,9 @@
     </main>
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
-      ><span class="logo-web">Web</span
-      ><span class="logo-studio">Studio</span></a
-    >
+        ><span class="logo-web">Web</span
+        ><span class="logo-studio">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
