--- a/index.html
+++ b/index.html
@@ -16,32 +16,31 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo" href="./index.html"
-          ><span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
+        <a class="header-logo logo link" href="./index.html"
+          >Web<span class="logo-studio">Studio</span></a
         >
 
-        <ul class="header-list">
+        <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link" href="./index.html">Studio</a>
+            <a class="header-item link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="./portfolio.html">Portfolio</a>
+            <a class="header-item link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="">Contacts</a>
+            <a class="header-item link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul class="header-address-list">
-          <li class="header-address-item">
-            <a class="header-address-link" href="mailto:info@devstudio.com"
+      <address class="address">
+        <ul class="address-list list">
+          <li class="address-item">
+            <a class="address-item link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-address-item">
-            <a class="header-address-link" href="tel:+110001111111"
+          <li class="address-item">
+            <a class="address-item link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -55,7 +54,7 @@
       </section>
 
       <section class="about">
-        <h2 class="about-title">About</h2>
+        <h2 hidden class="about-title">About</h2>
         <ul class="about-list">
           <li class="about-item">
             <h3 class="about-subtitle">Strategy</h3>
