--- a/portfolio.html
+++ b/portfolio.html
@@ -16,12 +16,11 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo" href="./index.html"
-          ><span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
+        <a class="header-logo logo link" href="./index.html"
+          >Web<span class="logo-studio">Studio</span></a
         >
 
-        <ul class="header-list">
+        <ul class="header-list list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
           </li>
