--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <section class="about">
         <h2 hidden class="about-title">About</h2>
-        <ul class="about-list">
+        <ul class="about-list list">
           <li class="about-item">
             <h3 class="about-subtitle">Strategy</h3>
             <p class="about-text">
@@ -89,7 +89,7 @@
 
       <section class="example">
         <h2 class="example-title">What are we doing</h2>
-        <ul class="example-list">
+        <ul class="example-list list">
           <li class="example-item">
             <img
               src="./images/img1.jpg"
@@ -119,7 +119,7 @@
 
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <li class="team-item">
             <img
               src="./images/card1.jpg"
@@ -164,10 +164,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        ><span class="logo-web">Web</span
-        ><span class="logo-studio">Studio</span></a
-      >
+        <a class="footer-logo logo link" href="./index.html"
+          >Web<span class="logo-studio">Studio</span></a
+        >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
