--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo logo link" href="./index.html"
+        <a class="header-logo logo" href="./index.html"
           >Web<span class="logo-studio">Studio</span></a
         >
 
@@ -175,11 +175,10 @@
     </main>
 
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        ><span class="logo-web">Web</span
-        ><span class="logo-studio">Studio</span></a
+      <a class="footer-logo logo link" href="./index.html"
+        >Web<span class="logo-studio">Studio</span></a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
