--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </main>
     <footer class="footer">
         <a class="footer-logo logo link" href="./index.html"
-          >Web<span class="logo-studio">Studio</span></a
+          >Web<span class="footer-logo-studio">Studio</span></a
         >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
