--- a/portfolio.html
+++ b/portfolio.html
@@ -16,31 +16,31 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo logo" href="./index.html"
+        <a class="header-logo logo link" href="./index.html"
           >Web<span class="logo-studio">Studio</span></a
         >
 
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link" href="./index.html">Studio</a>
+            <a class="header-item link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="./portfolio.html">Portfolio</a>
+            <a class="header-item link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="">Contacts</a>
+            <a class="header-item link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul class="header-address-list">
-          <li class="header-address-item">
-            <a class="header-address-link" href="mailto:info@devstudio.com"
+      <address class="address">
+        <ul class="address-list list">
+          <li class="address-item">
+            <a class="address-item link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-address-item">
-            <a class="header-address-link" href="tel:+110001111111"
+          <li class="address-item">
+            <a class="address-item link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -67,6 +67,7 @@
           </li>
         </ul>
       </section>
+    </main>
 
       <section class="row1">
         <ul class="row1-list">
@@ -172,11 +173,10 @@
           </li>
         </ul>
       </section>
-    </main>
 
     <footer class="footer">
       <a class="footer-logo logo link" href="./index.html"
-        >Web<span class="logo-studio">Studio</span></a
+        >Web<span class="footer-logo-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
