--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,8 @@
     </header>
     <main>
       <section class="filter">
-        <ul class="filter-list">
+        <h1 hidden>Filter</h1>
+        <ul class="filter-list list">
           <li class="filter-item">
             <button class="filter-btn" type="button">All</button>
           </li>
@@ -67,112 +68,106 @@
           </li>
         </ul>
       </section>
-    </main>
+    
 
-      <section class="row1">
-        <ul class="row1-list">
-          <li class="row1-item">
+      <section class="rows">
+        <ul class="row-list list">
+          <li class="row-item link">
             <img
               src="./images/projectcard1.jpg"
               alt="Project Card 1"
               width="360"
               height="300"
             />
-            <h3 class="row1-title">Banking App Interface Concept</h3>
-            <p class="row1-text">App</p>
+            <h2 class="row-title">Banking App Interface Concept</h2>
+            <p class="row-text">App</p>
           </li>
-          <li class="row1-item">
+          <li class="row-item link">
             <img
               src="./images/projectcard2.jpg"
               alt="Project Card 2"
               width="360"
               height="300"
             />
-            <h3 class="row1-title">Cashless Payment</h3>
-            <p class="row1-text">Marketing</p>
+            <h2 class="row-title">Cashless Payment</h2>
+            <p class="row-text">Marketing</p>
           </li>
-          <li class="row1-item">
+          <li class="row-item link">
             <img
               src="./images/projectcard3.jpg"
               alt="Project Card 3"
               width="360"
               height="300"
             />
-            <h3 class="row1-title">Meditaion App</h3>
-            <p class="row1-text">App</p>
-          </li>
-        </ul>
-      </section>
-
-      <section class="row2">
-        <ul class="row2-list">
-          <li class="row2-item">
+            <h2 class="row-title">Meditaion App</h2>
+            <p class="row-text">App</p>
+          </li>    
+          <li class="row-item link">
             <img
               src="./images/projectcard4.jpg"
               alt="Project Card 4"
               width="360"
               height="300"
             />
-            <h3 class="row2-title">Taxi Service</h3>
-            <p class="row2-text">Marketing</p>
+            <h2 class="row-title">Taxi Service</h2>
+            <p class="row-text">Marketing</p>
           </li>
-          <li class="row2-item">
+          <li class="row-item link">
             <img
               src="./images/projectcard5.jpg"
               alt="Project Card 5"
               width="360"
               height="300"
             />
-            <h3 class="row2-title">Screen Illustrations</h3>
+            <h3 class="row-title">Screen Illustrations</h3>
             <p class="row2-text">Design</p>
           </li>
-          <li class="row2-item">
+          <li class="row-item link">
             <img
               src="./images/projectcard6.jpg"
               alt="Project Card 6"
               width="360"
               height="300"
             />
-            <h3 class="row2-title">Online Courses</h3>
-            <p class="row2-text">Marketing</p>
+            <h3 class="row-title">Online Courses</h3>
+            <p class="row-text">Marketing</p>
           </li>
         </ul>
-      </section>
-
-      <section class="row3">
-        <ul class="row3-list">
-          <li class="row3-item">
+      
+        <ul class="row3-list list">
+          <li class="row-item link">
             <img
               src="./images/projectcard7.jpg"
               alt="Project Card 7"
               width="360"
               height="300"
             />
-            <h3 class="row3-title">Instagram Stories Concept</h3>
-            <p class="row3-text">Design</p>
+            <h3 class="row-title">Instagram Stories Concept</h3>
+            <p class="row-text">Design</p>
           </li>
-          <li class="row3-item">
+          <li class="row-item link">
             <img
               src="./images/projectcard8.jpg"
               alt="Project Card 8"
               width="360"
               height="300"
             />
-            <h3 class="row3-title">Organic Food</h3>
-            <p class="row3-text">Web Site</p>
+            <h3 class="row-title">Organic Food</h3>
+            <p class="row-text">Web Site</p>
           </li>
-          <li class="row3-item">
+          <li class="row-item link">
             <img
               src="./images/projectcard9.jpg"
               alt="Project Card 9"
               width="360"
               height="300"
             />
-            <h3 class="row3-title">Fresh Coffee</h3>
-            <p class="row3-text">Web Site</p>
+            <h3 class="row-title">Fresh Coffee</h3>
+            <p class="row-text">Web Site</p>
           </li>
         </ul>
       </section>
+    </main>
 
     <footer class="footer">
       <a class="footer-logo logo link" href="./index.html"
