--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
     
         <ul class="row-list list">
           <li class="row-item link">
-            <img
+            <img class="link"
               src="./images/projectcard1.jpg"
               alt="Project Card 1"
               width="360"
