--- a/portfolio.html
+++ b/portfolio.html
@@ -70,13 +70,14 @@
     
         <ul class="row-list list">
           <li class="row-item link">
-            <a class="link"></a>
+            <a class="link" href="#">
             <img
               src="./images/projectcard1.jpg"
               alt="Project Card 1"
               width="360"
               height="300"
             />
+          </a>
             <h2 class="row-title">Banking App Interface Concept</h2>
             <p class="row-text">App</p>
           </li>
