--- a/portfolio.html
+++ b/portfolio.html
@@ -76,12 +76,13 @@
               alt="Project Card 1"
               width="360"
               height="300"
-            />
-          </a>
+            />          
             <h2 class="row-title">Banking App Interface Concept</h2>
             <p class="row-text">App</p>
+          </a>
           </li>
           <li class="row-item link">
+            <a class="link" href="#">
             <img
               src="./images/projectcard2.jpg"
               alt="Project Card 2"
@@ -90,8 +91,10 @@
             />
             <h2 class="row-title">Cashless Payment</h2>
             <p class="row-text">Marketing</p>
+          </a>
           </li>
           <li class="row-item link">
+            <a class="link" href="#">  
             <img
               src="./images/projectcard3.jpg"
               alt="Project Card 3"
@@ -100,8 +103,10 @@
             />
             <h2 class="row-title">Meditaion App</h2>
             <p class="row-text">App</p>
+            </a>
           </li>    
           <li class="row-item link">
+            <a class="link" href="#">
             <img
               src="./images/projectcard4.jpg"
               alt="Project Card 4"
@@ -110,8 +115,10 @@
             />
             <h2 class="row-title">Taxi Service</h2>
             <p class="row-text">Marketing</p>
+            </a>
           </li>
           <li class="row-item link">
+            <a class="link" href="#">
             <img
               src="./images/projectcard5.jpg"
               alt="Project Card 5"
@@ -120,8 +127,10 @@
             />
             <h2 class="row-title">Screen Illustrations</h2>
             <p class="row2-text">Design</p>
+            </a>
           </li>
           <li class="row-item link">
+            <a class="link" href="#">
             <img
               src="./images/projectcard6.jpg"
               alt="Project Card 6"
@@ -130,8 +139,10 @@
             />
             <h2 class="row-title">Online Courses</h2>
             <p class="row-text">Marketing</p>
+            </a>
           </li>
           <li class="row-item link">
+            <a class="link" href="#">
             <img
               src="./images/projectcard7.jpg"
               alt="Project Card 7"
@@ -140,8 +151,10 @@
             />
             <h3 class="row-title">Instagram Stories Concept</h3>
             <p class="row-text">Design</p>
+            </a>
           </li>
           <li class="row-item link">
+            <a class="link" href="#">
             <img
               src="./images/projectcard8.jpg"
               alt="Project Card 8"
@@ -150,8 +163,10 @@
             />
             <h2 class="row-title">Organic Food</h2>
             <p class="row-text">Web Site</p>
+          </a>
           </li>
           <li class="row-item link">
+            <a class="link" href="#">
             <img
               src="./images/projectcard9.jpg"
               alt="Project Card 9"
@@ -160,6 +175,7 @@
             />
             <h2 class="row-title">Fresh Coffee</h2>
             <p class="row-text">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
