--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
               width="360"
               height="300"
             />
-            <h2 class="row-title">Meditaion App</h2>
+            <h2 class="row-title">Meditataion App</h2>
             <p class="row-text">App</p>
             </a>
           </li>    
@@ -126,7 +126,7 @@
               height="300"
             />
             <h2 class="row-title">Screen Illustrations</h2>
-            <p class="row2-text">Design</p>
+            <p class="row-text">Design</p>
             </a>
           </li>
           <li class="row-item link">
@@ -149,7 +149,7 @@
               width="360"
               height="300"
             />
-            <h3 class="row-title">Instagram Stories Concept</h3>
+            <h2 class="row-title">Instagram Stories Concept</h2>
             <p class="row-text">Design</p>
             </a>
           </li>
