--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
               width="360"
               height="300"
             />
-            <h2 class="row-title">Meditataion App</h2>
+            <h2 class="row-title">Meditation App</h2>
             <p class="row-text">App</p>
             </a>
           </li>    
