--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <nav class="header-nav">
         <a class="header-logo logo link" href="./index.html"
